--- a/index.html
+++ b/index.html
@@ -1729,7 +1729,7 @@
                                         <p>Phone : <span> +123 456 7890</span></p>
                                     </li> -->
                                     <li>
-                                        <p>College : <span> VIT, Bhopal </span></p>
+                                        <p>College : <span> VIT Bhopal University</span></p>
                                     </li>
 
                                     <li>
